Metaball family inherits wrong resolution by deleted metaobject, but new object don`t inherit settings by family #61917

Closed
opened 2019-02-25 01:20:03 +01:00 by Vyacheslav Kobozev · 16 comments

Broken: 2.8 24.02.2019

How to reproduce:
Add 2 metaballs, change resolution and threshold.

Deselect. Add another one meta. It will appear with default settings.
Change it`s settings a little. Delete it.
Setting will drop to family.

p.s. The same bug at 2.79b: new meta appears with default settings.
Metaballs is great and powerfull, but sadly bugged…

Here is videos:
2019-02-25_03-09-42.mp4
2019-02-25_03-16-23.mp4

Broken: 2.8 24.02.2019 How to reproduce: Add 2 metaballs, change resolution and threshold. Deselect. Add another one meta. It will appear with default settings. Change it`s settings a little. Delete it. Setting will drop to family. p.s. The same bug at 2.79b: new meta appears with default settings. Metaballs is great and powerfull, but sadly bugged… Here is videos: [2019-02-25_03-09-42.mp4](https://archive.blender.org/developer/F6707647/2019-02-25_03-09-42.mp4) [2019-02-25_03-16-23.mp4](https://archive.blender.org/developer/F6707668/2019-02-25_03-16-23.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Can you upload the .blend file, please?

Maybe this is related to D4398.

Can you upload the .blend file, please? Maybe this is related to [D4398](https://archive.blender.org/developer/D4398).

Yes different resolution for core ball and new capsule saved:
2.79: Metaball 279.blend
2.80: Metaball 280.blend

Yes different resolution for core ball and new capsule saved: 2.79: [Metaball 279.blend](https://archive.blender.org/developer/F6716198/Metaball__279.blend) 2.80: [Metaball 280.blend](https://archive.blender.org/developer/F6716199/Metaball__280.blend)
Vyacheslav Kobozev changed title from Metaball family inherits wrong resolution by deleded metaobject, but new object do not inherit settings by family to Metaball family inherits wrong resolution by deleted metaobject, but new object don`t inherit settings by family 2019-02-26 10:41:39 +01:00

Anything else i can do?

Anything else i can do?

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sebastian Parborg self-assigned this 2019-03-01 16:53:21 +01:00

I'll take a look at this as I already have worked on metaballs (D4398)

I'll take a look at this as I already have worked on metaballs ([D4398](https://archive.blender.org/developer/D4398))

The problem here is more obvious in 2.79. As soon as you change any value of a metaball, all other metaball objects with the same base name has their attributes updated to the same value.

In 2.8, this also happens but the actual update doesn't refresh the tessellation results in this case until a object is deleted.

@Vyach I'm guessing that the desired behavior is that new objects that share the same base name should copy the initial settings from the already existing metaballs?

The way the settings will not be out of sync.

The problem here is more obvious in 2.79. As soon as you change any value of a metaball, all other metaball objects with the same base name has their attributes updated to the same value. In 2.8, this also happens but the actual update doesn't refresh the tessellation results in this case until a object is deleted. @Vyach I'm guessing that the desired behavior is that new objects that share the same base name should copy the initial settings from the already existing metaballs? The way the settings will not be out of sync.

Removed subscriber: @Vyach

Removed subscriber: @Vyach

Added subscriber: @sebastian-4

Added subscriber: @sebastian-4

@ZedDB
Yes, you are right. New metas should born with settings, inherited by family. It will prevent such problem in 2.8 and 2.79 too

@ZedDB Yes, you are right. New metas should born with settings, inherited by family. It will prevent such problem in 2.8 and 2.79 too

I've uploaded a fix: D4453

I've uploaded a fix: [D4453](https://archive.blender.org/developer/D4453)

This issue was referenced by b2889c7cf1

This issue was referenced by b2889c7cf122a5bc6b028470c3c3800637e780ab

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This is now working as it did in 2.79, suggest to resolve the remaining glitches by not attempting to copy settings at all, see: D4456.

Although this is much lower priority since they're not new in 2.8x.

This is now working as it did in 2.79, suggest to resolve the remaining glitches by not attempting to copy settings at all, see: [D4456](https://archive.blender.org/developer/D4456). Although this is much lower priority since they're not new in 2.8x.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61917
No description provided.