Fix T61917: Metaball family inherits wrong resolution by deleted object

Synchronizing values between object data is error prone (not updated on
creation or renaming), add an update to have them working as they did
in 2.79.